<resources>
    <string name="app_name">Gra Miejska</string>

    <!--first screen-->
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="passwordRe">Powtórz Hasło</string>
    <string name="welcome">Witamy i życzymy udanej zabawy.</string>
    <string name="textLogin">Logowanie</string>
    <string name="loginButton">Login</string>
    <string name="textRegister">Rejestracja</string>
    <string name="username">Username</string>
    <string name="registerButton">Zarejestruj</string>
    <!--first screen-->
    <!--choise_save-->
    <string name="saveOnGameWelcome">Podaj kod gry aby dołączyć do zabawy :)</string>
    <string name="saveOnGame">Dołącz do zabawy</string>
    <string name="textGoButton">Kontynuuj</string>

    <string name="textGoButtonEnd">Zobacz</string>

    <string name="notEndGame">Brak ukończonych gier.</string>

    <string name="gameCode">Kod gry</string>

    <string name="goToButton">Dalej</string>

    <string name="checkButton">Sprawdź</string>

    <string name="activeGames">Gry aktywne</string>
    <string name="logoutText">Wyloguj</string>
    <string name="endGame">Gry ukończone</string>


</resources>
