<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChoiceSaveActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/textSaveOnGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/saveOnGameWelcome"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/gameCode"
            style="@style/EditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/gameCode"
            android:textColor="@color/warmGrey"
            android:textSize="7pt" />

        <Button
            android:id="@+id/saveToGameButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_button"
            android:letterSpacing="0.06"
            android:text="@string/saveOnGame"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="6pt" />

        <android.support.v7.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:splitMotionEvents="true"
            tools:listitem="@layout/fragment_game" />

    </LinearLayout>

</RelativeLayout>